--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -502,13 +502,47 @@ a.search {
   color: #000000;
 }
 
+.main-catalog {
+  background-color: #FFFFFF;
+}
+
 .filter {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 35px 70px 70px;
+  width: 1200px;
+  height: 412px;
   background-image: url('../images/catalog_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
+}
+
+.filter-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 40px;
+  width: 1060px;
+  height: 307px;
+}
+
+.filter form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 1060px;
+  height: 160px;
+  padding: 0;
+}
+
+.catalog-header {
+  width: 1060px;
+  min-height: 107px;
 }
 
 .catalog-header-title {
@@ -519,18 +553,32 @@ a.search {
   color: #FFFFFF;
 }
 
-.main-catalog {
-  background-color: #FFFFFF;
-}
-
 .home-icon {
   width: 12px;
   height: 12px;
 }
 
-.arrow-icon {
-  width: 7px;
+.breadcrumbs {
+  display: flex;
+  width: 114px;
+  height: 21px;
+}
+
+.breadcrumbs-item {
+  position: relative;
+}
+
+.breadcrumbs-item:not(:last-child)::after{
+  content: '';
+  position: absolute;
+  display: block;
+  width: 6px;
   height: 10px;
+  top: 5px;
+  left: 1px;
+  background: url('../images/arrow_catalog.svg');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
 }
 
 .breadcrumbs-link {
@@ -539,6 +587,10 @@ a.search {
   font-size: 16px;
   line-height: 21px;
   color: #FFFFFF;
+}
+
+fieldset {
+  border: none;
 }
 
 .catalog-filter-title {
@@ -550,16 +602,59 @@ a.search {
   color: #FFFFFF;
 }
 
+.catalog-filter-item {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #FFFFFF;
+}
+
+.catalog-filter .button {
+  font-family: 'PT Sans',sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding: 8px 50px;
+  width: 191px;
+  height: 36px;
+  border-radius: 4px;
+  border: none;
+}
+
+.catalog-filter .button-submit {
+  background: #82B3D3;
+}
+
+.catalog-filter .button-reset {
+  background: none;
+}
+
+.cost-range .button {
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border-radius: 5px;
+}
+
+.catalog {
+  display: flex;
+  flex-direction: column;
+  padding: 50px 70px 60px;
+  gap: 40px;
+}
+
 .catalog-sort {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-}
-
-.hotel-card-container {
-  display: flex;
-  flex-direction: row;
+  width: 1060px;
+  height: 49px;
+  padding: 0;
 }
 
 .found {
@@ -584,27 +679,50 @@ a.search {
   color: #000000;
 }
 
-.button-card {
-  text-decoration: none;
+.link-card {
+  width: 48px;
+  height: 48px;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  padding: 11px 14px;
 }
 
-.button-slide {
-  text-decoration: none;
+.link-slide {
+  width: 48px;
+  height: 48px;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  padding: 11px 14px;
 }
 
-.button-list {
-  text-decoration: none;
+.link-list {
+  width: 48px;
+  height: 48px;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  padding: 11px 14px;
+}
+
+.hotel-card-container {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  gap: 20px;
+  width: 1060px;
+  height: 438px;
+}
+
+.hotel-card {
+  display: flex;
+  flex-direction: column;
+  width: 340px;
+  min-height: 438px;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
 }
 
 .hotel-card-link {
   text-decoration: none;
-}
-
-.hotel-card {
-  width: 340px;
-  height: 438px;
-  border: 1px solid #e6e6e6;
-  border-radius: 4px;
 }
 
 .hotel-card-title {
@@ -636,31 +754,138 @@ a.search {
   color: #333333;
 }
 
-.pagination-link {
+.button-about {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+  padding: 8px;
+  width: 140px;
+  height: 36px;
+  background: #756157;
+  border-radius: 4px;
+}
+
+.button-like {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+  padding: 8px;
+  width: 140px;
+  height: 36px;
+  background: #82B3D3;
+  border-radius: 4px;
+}
+
+.like-selected {
+  background: #7DB54F;
+}
+
+.rating-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  gap: 20px;
+  width: 300px;
+  height: 37px;
+}
+
+.star {
+  background-image: url('../images/star.svg');
+  background-repeat: repeat-x;
+  height: 17px;
+}
+
+.star-4 {
+  width: 72px;
+}
+
+.star-3 {
+  width: 54px;
+}
+
+.star-2 {
+  width: 37px;
+}
+
+.rating {
+  width: 140px;
+  height: 37px;
+  font-family: 'PT Sans',sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #333333;
+  background: #F2F2F2;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  width: 1060px;
+  height: 60px;
+}
+
+.pagination-item {
   width: 60px;
   height: 60px;
   background-color: #82b3d3;
   border-radius: 4px;
-  text-decoration: none;
+  text-align: center;
+  padding: 12px;
 }
 
-.pagination-current {
+.pagination-item:nth-child(1) {
   background-color: #F2F2F2;
 }
 
-.pagination-list {
-  background-color: #FFFFFF;
+.pagination-item:nth-child(5) {
+  background-color: #F2F2F2;
 }
 
-.subscribe.subscribe-catalog{
+.pagination-link {
+  font-family: 'PT Sans',sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.pagination-current {
+  color: #000000;
+}
+
+.pagination-list {
+  color: #000000;
+}
+
+.subscribe-catalog{
   background-color: #FFFFFF;
   background-image: none;
 }
 
-.subscribe-title.catalog-title {
+.catalog-title {
   color: #000000;
 }
 
-.subscribe-description.catalog-description {
+.catalog-description {
   color: #000000;
 }
