--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,18 @@ body {
   background-color: #F2F2F2;
 }
 
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 20px #000000;
+}
+
+
 ul {
   list-style-type: none;
 }
@@ -60,7 +72,7 @@ ul {
 .main-header {
   color: #FFFFFF;
   background-color: #FFFFFF;
-  padding: 0 70px;
+  padding: 0 70px 0 70px;
 }
 
 .navigation {
@@ -73,6 +85,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 339px;
   margin: 0;
   padding: 0;
@@ -81,13 +94,16 @@ ul {
 
 .navigation-user {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  width: 268px;
+  min-width: 268px;
   margin-left: auto;
+  padding: 0;
+  gap: 20px;
 }
 
 .navigation-link {
+  padding: 20px 16px 20px 16px;
   color: black;
   width: 68px;
   font-family: 'PT Sans', sans-serif;
@@ -131,6 +147,9 @@ ul {
 }
 
 .navigation-box {
+  display: flex;
+  justify-content: center;
+  min-width: 160px;
   padding: 8px 50px;
   background-color: #756157;
   border-radius: 4px;
@@ -145,20 +164,12 @@ ul {
   flex-grow: 1;
 }
 
-.page-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .hero{
   background: url('../images/main_background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
   position: relative;
-  min-height: 420px;
+  min-height: 485px;
 }
 
 .hero::after {
@@ -186,13 +197,18 @@ ul {
 }
 
 .hero-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #FFFFFF;
-  margin-top: -25px;
-  padding-top: 25px;
+  padding: 69px 0;
+  gap: 25px;
   min-height: 200px;
 }
 
 .hero-title {
+  width: 620px;
+  height: 72px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -203,6 +219,8 @@ ul {
 }
 
 .hero-subtitle {
+  width: 651px;
+  height: 26px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 22px;
@@ -312,46 +330,43 @@ ul {
 .features-list {
   display: flex;
   justify-content: space-between;
+  padding: 0;
 }
 
 .features-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
   width: 400px;
   min-height: 385px;
+  padding: 80px 85px;
 }
 
 .features-item:nth-child(1) {
   background: url('../images/residential.svg');
   background-position-x: center;
-  background-position-y: top;
+  background-position-y: 30px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .features-item:nth-child(2) {
   background: url('../images/food.svg');
   background-position-x: center;
-  background-position-y: top;
+  background-position-y: 30px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .features-item:nth-child(3) {
   background: url('../images/souvenirs.svg');
   background-position-x: center;
-  background-position-y: top;
+  background-position-y: 30px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .features .features-title {
@@ -387,7 +402,10 @@ h3.features-title {
 }
 
 section.search {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
   padding: 96px 304px;
   width: 1200px;
   height: 406px;
@@ -466,6 +484,8 @@ a.search {
   height: 52px;
   padding: 12px 20px;
   border-radius: 4px 0 0 4px;
+  border-style: none;
+  background-color: #F2F2F2;
 }
 
 .button-subscribe {
@@ -482,13 +502,38 @@ a.search {
   height: 52px;
   padding: 4px 50px 8px 50px;
   margin-left: -6px;
+  border-style: none;
+}
+
+.footer {
+  position: relative;
+  width: 1200px;
+  height: 120px;
+  margin: 0 auto;
 }
 
 .page-footer-container {
+  position: absolute;
+  top: 40px;
+  left: 70px;
+  bottom: 30px;
   display: flex;
   justify-content: space-between;
-  width: 1200px;
+  align-items: center;
+  width: 1060px;
+  padding: 0;
   margin: 0 auto;
+}
+
+.social {
+  width: 140px;
+  min-height: 40px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .link-phone {
@@ -506,28 +551,14 @@ a.search {
   background-color: #FFFFFF;
 }
 
-.filter {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 10px;
-  padding: 35px 70px 70px;
+.filter-container {
+  padding: 35px 70px;
   width: 1200px;
-  height: 412px;
+  min-height: 412px;
   background-image: url('../images/catalog_background.jpg');
-  background-size: 100% auto;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-}
-
-.filter-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0;
-  gap: 40px;
-  width: 1060px;
-  height: 307px;
 }
 
 .filter form {
@@ -543,6 +574,7 @@ a.search {
 .catalog-header {
   width: 1060px;
   min-height: 107px;
+  margin-bottom: 40px;
 }
 
 .catalog-header-title {
@@ -551,6 +583,7 @@ a.search {
   font-size: 60px;
   line-height: 78px;
   color: #FFFFFF;
+  margin: 0;
 }
 
 .home-icon {
@@ -560,6 +593,9 @@ a.search {
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
   width: 114px;
   height: 21px;
 }
@@ -593,13 +629,34 @@ fieldset {
   border: none;
 }
 
+.catalog-filter {
+  display: flex;
+  gap: 70px;
+}
+
 .catalog-filter-title {
+  margin-bottom: 32px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
   color: #FFFFFF;
+}
+
+.catalog-filter-group {
+  margin: 0;
+  padding: 0;
+  min-width: 150px;
+  height: 157px;
+}
+
+.catalog-filter-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
 
 .catalog-filter-item {
@@ -625,6 +682,10 @@ fieldset {
   border: none;
 }
 
+.filter-cost {
+  margin-left: auto;
+}
+
 .catalog-filter .button-submit {
   background: #82B3D3;
 }
@@ -633,11 +694,36 @@ fieldset {
   background: none;
 }
 
-.cost-range .button {
+.cost-range .button-cost {
   width: 20px;
   height: 20px;
   background: #FFFFFF;
   border-radius: 5px;
+}
+
+.fieldset-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-top: 56px;
+}
+
+.fieldset-wrapper {
+  width: 287px;
+}
+
+.filter-range {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter-range input {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  width: 143px;
+  height: 48px;
 }
 
 .catalog {
@@ -667,6 +753,7 @@ fieldset {
 }
 
 .select-control {
+  margin-left: 150px;
   box-sizing: border-box;
   width: 292px;
   height: 49px;
@@ -679,7 +766,15 @@ fieldset {
   color: #000000;
 }
 
-.link-card {
+.sort-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.button-card {
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -687,7 +782,7 @@ fieldset {
   padding: 11px 14px;
 }
 
-.link-slide {
+.button-slide {
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -695,7 +790,7 @@ fieldset {
   padding: 11px 14px;
 }
 
-.link-list {
+.button-list {
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -706,19 +801,45 @@ fieldset {
 .hotel-card-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 0;
   gap: 20px;
   width: 1060px;
-  height: 438px;
+  margin: 0;
 }
 
 .hotel-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   width: 340px;
   min-height: 438px;
   border: 1px solid #e6e6e6;
   border-radius: 4px;
+}
+
+.text-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+  height: 21px;
+}
+
+.button-wrapper {
+  display: flex;
+  gap: 20px;
+}
+
+.rating-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  gap: 20px;
+  width: 300px;
+  height: 37px;
 }
 
 .hotel-card-link {
@@ -790,16 +911,6 @@ fieldset {
   background: #7DB54F;
 }
 
-.rating-wrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0;
-  gap: 20px;
-  width: 300px;
-  height: 37px;
-}
-
 .star {
   background-image: url('../images/star.svg');
   background-repeat: repeat-x;
@@ -837,6 +948,8 @@ fieldset {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 8px;
   padding: 0;
   width: 1060px;
   height: 60px;
