--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,7 @@ ul {
 .navigation-list {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   width: 339px;
   margin: 0;
@@ -93,9 +93,6 @@ ul {
 }
 
 .navigation-user {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   min-width: 268px;
   margin-left: auto;
   padding: 0;
@@ -112,6 +109,21 @@ ul {
   font-size: 20px;
   line-height: 24px;
   text-decoration: none;
+}
+
+.navigation-button {
+  padding: 8px 50px;
+  background-color: #756157;
+  border-radius: 4px;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+  border-style: none;
 }
 
 .navigation-search {
@@ -144,20 +156,6 @@ ul {
   color: #FFFFFF;
   font-size: 10px;
   text-align: center;
-}
-
-.navigation-box {
-  display: flex;
-  justify-content: center;
-  min-width: 160px;
-  padding: 8px 50px;
-  background-color: #756157;
-  border-radius: 4px;
-  color: #FFFFFF;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  white-space: nowrap;
 }
 
 .main-container {
@@ -197,13 +195,9 @@ ul {
 }
 
 .hero-description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: #FFFFFF;
-  padding: 69px 0;
-  gap: 25px;
   min-height: 200px;
+  padding: 69px 0;
 }
 
 .hero-title {
@@ -216,17 +210,20 @@ ul {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin: 0 auto;
+  margin-bottom: 25px;
 }
 
 .hero-subtitle {
-  width: 651px;
-  height: 26px;
+  min-width: 651px;
+  min-height: 26px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
   color: #333333;
+  margin: 0 auto;
 }
 
 .advantages-list {
@@ -239,9 +236,6 @@ ul {
 }
 
 .advantages-wrapper:nth-child(1) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   color: #FFFFFF;
   padding: 103px 85px;
 }
@@ -250,49 +244,37 @@ ul {
   background-color: #82B3D3;
   display: flex;
   width: 1200px;
-  height: 385px;
+  min-height: 385px;
 }
 
 .advantages-wrapper:nth-child(2) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   color: #FFFFFF;
   padding: 103px 85px;
 }
 
 .advantages-image {
   width: 800px;
-  height: 385px;
+  min-height: 385px;
 }
 
 .advantages-item:nth-child(2) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: rgba(131, 179, 211, 0.2);
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   padding: 103px 85px;
 }
 
 .advantages-item:nth-child(3) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: rgba(131, 179, 211, 0.12);
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   padding: 103px 85px;
 }
 
 .advantages-item:nth-child(4) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: rgba(131, 179, 211, 0.2);
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   padding: 103px 85px;
 }
 
@@ -300,7 +282,7 @@ ul {
   background-color: #82B3D3;
   display: flex;
   width: 1200px;
-  height: 385px;
+  min-height: 385px;
 }
 
 .advantages-title {
@@ -323,7 +305,7 @@ ul {
 
 .features-wrapper {
   width: 1200px;
-  height: 246px;
+  min-height: 246px;
   padding: 64px 0;
 }
 
@@ -489,20 +471,21 @@ a.search {
 }
 
 .button-subscribe {
+  padding: 4px 50px 8px 50px;
+  background-color: #82B3D3;
+  border-radius: 0 4px 0 4px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
-  background-color: #82b3d3;
-  border-radius: 0 4px 4px 0;
+  text-decoration: none;
   color: #FFFFFF;
-  width: 232px;
-  height: 52px;
-  padding: 4px 50px 8px 50px;
-  margin-left: -6px;
   border-style: none;
+  margin-left: -6px;
+  min-width: 232px;
+  min-height: 52px;
 }
 
 .footer {
@@ -601,6 +584,7 @@ a.search {
 }
 
 .breadcrumbs-item {
+  margin-left: auto;
   position: relative;
 }
 
@@ -610,8 +594,8 @@ a.search {
   display: block;
   width: 6px;
   height: 10px;
-  top: 5px;
-  left: 1px;
+  top: 8px;
+  left: 17px;
   background: url('../images/arrow_catalog.svg');
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -775,6 +759,9 @@ fieldset {
 }
 
 .button-card {
+  background: url('../images/link_card.svg');
+  background-repeat: no-repeat;
+  background-position: center;
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -783,6 +770,9 @@ fieldset {
 }
 
 .button-slide {
+  background: url('../images/link-slide.svg');
+  background-repeat: no-repeat;
+  background-position: center;
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -791,6 +781,9 @@ fieldset {
 }
 
 .button-list {
+  background: url('../images/link-list.svg');
+  background-repeat: no-repeat;
+  background-position: center;
   width: 48px;
   height: 48px;
   border: 2px solid #000000;
@@ -822,8 +815,9 @@ fieldset {
 .text-wrapper {
   display: flex;
   justify-content: space-between;
-  width: 300px;
-  height: 21px;
+  min-width: 300px;
+  min-height: 21px;
+  margin-bottom: 16px;
 }
 
 .button-wrapper {
@@ -838,8 +832,8 @@ fieldset {
   justify-content: space-between;
   padding: 0;
   gap: 20px;
-  width: 300px;
-  height: 37px;
+  min-width: 300px;
+  min-height: 37px;
 }
 
 .hotel-card-link {
@@ -885,8 +879,8 @@ fieldset {
   text-decoration: none;
   color: #FFFFFF;
   padding: 8px;
-  width: 140px;
-  height: 36px;
+  min-width: 140px;
+  min-height: 36px;
   background: #756157;
   border-radius: 4px;
 }
@@ -901,8 +895,8 @@ fieldset {
   text-decoration: none;
   color: #FFFFFF;
   padding: 8px;
-  width: 140px;
-  height: 36px;
+  min-width: 140px;
+  min-height: 36px;
   background: #82B3D3;
   border-radius: 4px;
 }
@@ -918,20 +912,20 @@ fieldset {
 }
 
 .star-4 {
-  width: 72px;
+  min-width: 72px;
 }
 
 .star-3 {
-  width: 54px;
+  min-width: 54px;
 }
 
 .star-2 {
-  width: 37px;
+  min-width: 37px;
 }
 
 .rating {
-  width: 140px;
-  height: 37px;
+  min-width: 140px;
+  min-height: 37px;
   font-family: 'PT Sans',sans-serif;
   font-weight: 400;
   font-size: 16px;
