--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,9 @@ ul {
 
 .logo {
   width: 140px;
-  height: 70px;
+  height: auto;
+  margin-bottom: -5px;
+  z-index: 1;
 }
 
 .main-header {
@@ -95,14 +97,12 @@ ul {
 .navigation-user {
   min-width: 268px;
   margin-left: auto;
-  padding: 0;
-  gap: 20px;
+  justify-content: flex-end;
 }
 
 .navigation-link {
   padding: 20px 16px 20px 16px;
   color: black;
-  width: 68px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   text-align: center;
@@ -111,8 +111,23 @@ ul {
   text-decoration: none;
 }
 
+.current-link {
+  position: relative;
+}
+
+.current-link::after {
+  position: absolute;
+  content: '';
+  height: 2px;
+  left: 16px;
+  right: 16px;
+  bottom: 0;
+  background-color: #756257;
+}
+
 .navigation-button {
-  padding: 8px 50px;
+  padding: 8px 35px;
+  margin-left: 20px;
   background-color: #756157;
   border-radius: 4px;
   font-family: 'PT Sans', sans-serif;
@@ -124,6 +139,20 @@ ul {
   text-decoration: none;
   color: #FFFFFF;
   border-style: none;
+  cursor: pointer;
+}
+
+.navigation-button:hover {
+  background-color: #615048;
+}
+
+.navigation-button:focus {
+  background-color: #615048;
+}
+
+.navigation-button:active {
+  background-color: #756157;
+  color: #FFFFFF4D;
 }
 
 .navigation-search {
@@ -286,11 +315,36 @@ ul {
 }
 
 .advantages-title {
+  position: relative;
+  margin: 0;
+  margin-bottom: 62px;
   font-family: 'PT Sans', sans-serif;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
+}
+
+.advantages-title:nth-child(1):after {
+  content: '';
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.30);
+  height: 2px;
+  bottom: -30px;
+  right: 87px;
+  width: 60px;
+}
+
+.advantages-item:nth-child(2) .advantages-title:after {
+  background-color: rgba(0, 0, 0, 0.30);
+}
+
+.advantages-item:nth-child(3) .advantages-title:after {
+  background-color: rgba(0, 0, 0, 0.30);
+}
+
+.advantages-item:nth-child(4) .advantages-title:after {
+  background-color: rgba(0, 0, 0, 0.30);
 }
 
 .advantages-description {
@@ -316,19 +370,14 @@ ul {
 }
 
 .features-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
   width: 400px;
   min-height: 385px;
-  padding: 80px 85px;
+  padding: 148px 85px 40px;
 }
 
 .features-item:nth-child(1) {
   background: url('../images/residential.svg');
-  background-position-x: center;
-  background-position-y: 30px;
+  background-position: center top 80px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
@@ -336,16 +385,14 @@ ul {
 
 .features-item:nth-child(2) {
   background: url('../images/food.svg');
-  background-position-x: center;
-  background-position-y: 30px;
+  background-position: center top 80px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
 }
 
 .features-item:nth-child(3) {
   background: url('../images/souvenirs.svg');
-  background-position-x: center;
-  background-position-y: 30px;
+  background-position: center top 80px;
   background-size: 75px 72px;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
@@ -425,6 +472,20 @@ section.search {
   text-decoration: none;
   color: #FFFFFF;
   border-style: none;
+  cursor: pointer;
+}
+
+.button-search:hover {
+  background-color: #615048;
+}
+
+.button-search:focus {
+  background-color: #615048;
+}
+
+.button-search:active {
+  background-color: #615048;
+  color: #FFFFFF4D;
 }
 
 .subscribe {
@@ -486,6 +547,20 @@ section.search {
   color: #FFFFFF;
   border-style: none;
   width: 212px;
+  cursor: pointer;
+}
+
+.button-subscribe:hover {
+  background-color: #68A2CA;
+}
+
+.button-subscribe:focus {
+  background-color: #68A2CA;
+}
+
+.button-subscribe:active {
+  background-color: #68A2CA;
+  color: #FFFFFF4D;
 }
 
 .footer {
@@ -521,6 +596,26 @@ section.search {
   padding: 0;
 }
 
+.social-item svg {
+  stroke: #83B3D3;
+  fill: #83B3D3;
+}
+
+.social-item svg:hover{
+  stroke: #68A2CA;
+  fill: #68A2CA;
+}
+
+.social-item svg:focus{
+  stroke: #68A2CA;
+  fill: #68A2CA;
+}
+
+.social-item svg:active{
+  stroke: #68A2CA4D;
+  fill: #68A2CA4D;
+}
+
 .link-phone {
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
@@ -530,6 +625,30 @@ section.search {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
+}
+
+.link-phone:hover {
+  color: #756157;
+}
+
+.link-phone:focus {
+  color: #756157;
+}
+
+.link-phone:active {
+  color: #7561574D;
+}
+
+.about-text svg:hover {
+  fill: #756157;
+}
+
+.about-text svg:focus {
+  fill: #756157;
+}
+
+.about-text svg:active {
+  fill: #7561574D;
 }
 
 .main-catalog {
